# abs-cmp-template

./: .gitignore  Containerfile  README.md  justfile  pyproject.toml  ruff.toml
.devcontainer/: Containerfile  devcontainer.json
.github/: dependabot.yaml
custom_metadata_provider/: __init__.py  app_data.sqlite  cache.py  data.py  database.py  main.py  models.py  search.py
