[tool.poetry]
name = "abs-cmp-template"
version = "0.1.0"
description = "A template for Audiobookshelf Custom Metadata Providers"
authors = ["FlyinPancake <36113055+FlyinPancake@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
pydantic-extra-types = "^2.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
